# human-things

./: .gitattributes  .gitignore  COLAB_SETUP.md  PROJECT_PLAN.md  README.md  paper_draft.md  pyproject.toml  requirements.txt
data/: guide.md
docs/: METHODS_AND_RESULTS.md
notebooks/: colab_cpu_safe_checks.ipynb  colab_full_training.ipynb  colab_run_baseline.ipynb  colab_run_baseline_v2.ipynb  local_cpu_safe_checks.ipynb
outputs/: embedding_benchmark_report.json  embedding_benchmark_report_with_joint_matrix.json  embedding_benchmark_report_with_v3.json  embedding_benchmark_summary.csv  embedding_benchmark_summary_with_joint_matrix.csv  embedding_benchmark_summary_with_v3.csv  image_metadata_report.json  image_splits_report.json  model_comparison_report.json  model_comparison_summary.csv  processed_data_report.json  triplet_satisfaction_report.json  triplet_satisfaction_summary.csv
scripts/: 00_data_snapshot.py  00_setup_things_data.py  01_extract_embeddings.py  01_make_metadata_csv.py  02_make_image_splits.py  02_quick_benchmarks.py  03_toy_models.py  03_train_resnet50_image_only.py  04_extract_resnet50_embeddings.py  04_prepare_processed_data.py  05_evaluate_resnet50_embeddings.py  06_package_data_for_colab.py  06_prepare_human_similarity.py  07_make_similarity_triplets.py  08_train_fixed_prototype_triplets.py  08_train_resnet50_human_informed.py  09_benchmark_embeddings.py  10_compare_model_reports.py  11_train_batch_prototype_triplets.py  11_train_resnet50_human_informed_v2.py  12_train_high_pressure_triplets.py  12_train_resnet50_human_informed_v3.py  (+6 more)
(+87 files in other folders)
